# mmk-mcp-indicadors

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  ENVIRONMENT_VARIABLES.md  README.md  README_ES.md  cloudbuild.yaml  docker-compose.yaml  f0_gate_pb_majors_binance.json  f0_gate_report.json  f0_gate_report_wide.json  pyproject.toml  requirements.txt
docs/: API_DOCUMENTATION.md  BROKER_MATRIX.md  F0_GATE_ANALYSIS.md  README_ES.md  STRATEGY_SETUPS_SPEC.md  TRADING_PATTERNS.md
docs/context/: README.md  architecture.md  conventions.md  decisions.md  glossary.md  known-errors.md  workflow.md
scripts/: run_f0_backtest.py
src/: log_conf.yaml  main.py  mcp_server.py  middlewares.py  security.py  web_server.py
src/controllers/: __init__.py  healthy_controller.py
src/routes/: __init__.py  (+1 more)
tests/: requirements-test.txt  test_ao_parity.py  test_backtest_service.py  test_bbwp_owner.py  test_chart_konkorde_and_span.py  test_chart_tv_parity_fields.py  test_evaluate_v020_endpoint.py  test_false_entry_state.py  test_healthy_controller.py  test_indicators_service.py  test_konkorde_golden.py  test_market_data_cache.py  test_market_data_closed_candle.py  test_mcp_auth.py  test_monitors_v020_assembly.py  test_movements_service.py  test_rule_v020_golden.py  test_rules_service.py  test_security.py  test_setup_backtest_service.py  test_setup_bands_and_vetoes.py  test_setup_elements_golden.py  test_setups_evaluate_endpoint.py  test_sizing_parity.py  test_ticker_service.py  test_trend_speed.py  test_v010_no_regression.py  test_v020_real_goldens.py  test_v020_replay_smoke.py
(+35 files in other folders)
